Fix bug with alignment props on Input

--- a/src/css/components/Input.css
+++ b/src/css/components/Input.css
@@ -152,16 +152,19 @@
 
 .Input.left {
   border-radius: var(--borderRadius-200) 0 0 var(--borderRadius-200);
+  z-index: 2;
 }
 
 .Input.middle {
   border-radius: 0;
   margin-left: -1px;
-  z-index: 0;
+  z-index: 1;
 }
 
 .Input.right {
   border-radius: 0 var(--borderRadius-200) var(--borderRadius-200) 0;
+  margin-left: -1px;
+  z-index: 0;
 }
 
 .Input.left:hover,
